2009-06-18  Bob Halley  <halley@dnspython.org>

	* dns/tsig.py: Added support for BADTRUNC result code.

2009-06-18  Bob Halley  <halley@dnspython.org>

	* dns/query.py (udp): When checking that addresses are the same,
	  use the binary form of the address in the comparison.  This
	  ensures that we don't treat addresses as different if they have
	  equivalent but differing textual representations.  E.g. "1:00::1"
	  and "1::1" represent the same address but are not textually equal.
	  Thanks to Kim Davies for reporting this bug.

2009-06-18  Bob Halley  <halley@dnspython.org>

	* The resolver's query() method now has an optional 'source' parameter,
	  allowing the source IP address to be specified.  Thanks to
	  Alexander Lind for suggesting the change and sending a patch.

2009-06-18  Bob Halley  <halley@dnspython.org>

	* Added NSEC3 and NSEC3PARAM support.

2009-06-17  Bob Halley  <halley@dnspython.org>

	* Fixed NSEC.to_text(), which was only printing the last window.
	  Thanks to Brian Wellington for finding the problem and fixing it.

2009-03-30  Bob Halley  <halley@dnspython.org>

	* dns/query.py (xfr): Allow UDP IXFRs.  Use "one_rr_per_rrset" mode when
	  doing IXFR.

2009-03-30  Bob Halley  <halley@dnspython.org>

	* Add "one_rr_per_rrset" mode switch to methods which parse
	  messages from wire format (e.g. dns.message.from_wire(),
	  dns.query.udp(), dns.query.tcp()).  If set, each RR read is
	  placed in its own RRset (instead of being coalesced).

2009-03-30  Bob Halley  <halley@dnspython.org>

	* Added EDNS option support.

2008-10-16  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/DS.py: The from_text() parser for DS RRs did not
	  allow multiple Base64 chunks.  Thanks to Rakesh Banka for
	  finding this bug and submitting a patch.

2008-06-03  Bob Halley  <halley@dnspython.org>

	* dns/message.py (Message.set_rcode): The mask used preserved the
	  extended rcode, instead of everything else in ednsflags.
