@@ -19,6 +19,9 @@ RSAMD5 = 1
 DH = 2
 DSA = 3
 ECC = 4
+RSASHA1 = 5
+DSANSEC3SHA1 = 6
+RSASHA1NSEC3SHA1 = 7
 INDIRECT = 252
 PRIVATEDNS = 253
 PRIVATEOID = 254
